[gd_scene load_steps=20 format=3 uid="uid://cuct8p78s0u5u"]

[ext_resource type="Texture2D" uid="uid://8fe272mr3wk6" path="res://art/enemies/goblin/goblin_idle_spritesheet.png" id="2_0s5fg"]
[ext_resource type="Texture2D" uid="uid://cpwe7yjo4quvw" path="res://art/enemies/goblin/goblin_run_spritesheet.png" id="3_aoqpk"]
[ext_resource type="Script" path="res://scripts/enemyglobin.gd" id="4_yiviu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_da7c6"]
atlas = ExtResource("2_0s5fg")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4klt"]
atlas = ExtResource("2_0s5fg")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_71a8w"]
atlas = ExtResource("2_0s5fg")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_otsdg"]
atlas = ExtResource("2_0s5fg")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtvyt"]
atlas = ExtResource("2_0s5fg")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxkwp"]
atlas = ExtResource("2_0s5fg")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2xra"]
atlas = ExtResource("3_aoqpk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fp77"]
atlas = ExtResource("3_aoqpk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcfbp"]
atlas = ExtResource("3_aoqpk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqiyc"]
atlas = ExtResource("3_aoqpk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfvbn"]
atlas = ExtResource("3_aoqpk")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuyii"]
atlas = ExtResource("3_aoqpk")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_eowtj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_da7c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4klt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71a8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otsdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtvyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxkwp")
}],
"loop": true,
"name": &"globin idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2xra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fp77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcfbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqiyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfvbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuyii")
}],
"loop": true,
"name": &"globin run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ytgpa"]
radius = 215.058

[sub_resource type="CircleShape2D" id="CircleShape2D_o46yg"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dugog"]
radius = 25.0

[node name="enemyglobin" type="CharacterBody2D"]
script = ExtResource("4_yiviu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eowtj")
animation = &"globin run"
offset = Vector2(0, -4)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_ytgpa")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
process_priority = 1
process_physics_priority = 1
y_sort_enabled = true
shape = SubResource("CircleShape2D_o46yg")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_dugog")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="projectile_timer" type="Timer" parent="."]
wait_time = 1.616

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="projectile_timer" to="." method="_on_projectile_timer_timeout"]
